# polis_3

./: .gitignore  README.md  agent_flow.md  agent_pass_flow.md  ecosystem_flow.md  orchestrator.py  pyproject.toml  reset.py  sandbox.py  sqlite_db.db  standalone_agent.py  sumomo.py
chroma_db.db/: chroma.sqlite3
configs/: standalone_agent_config.json
data/: synthetic_demographics.jsonl
libs/: agent.py  agent_interface.py  app_manager.py  common.py  demographic_seeds.py  memory  vector_storage.py
server/: server.py
server/web/: agent_state.html  index.html
tools/: chat.py  chat_v2.py  discord.py  discord_manager.py  discord_test.py  memory_manager.py  persona.py  quest.py  risk_game_manager.py  scheduled_tasks.py  sentient_toaster.py  slop.py  the_map.py
